--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,20 @@
-# joblib==1.1.0
-# matplotlib==3.3.2
-# numpy==1.24.1
-# pandas==1.4.2
-# scikit_learn==1.1.0
-# streamlit==1.9.0
-# plotly==5.8.0
+joblib==1.1.0
+matplotlib==3.3.2
+numpy==1.24.1
+pandas==1.4.2
+scikit_learn==1.1.0
+streamlit==1.9.0
+plotly==5.8.0
+protobuf==3.20.0
+
 
 
 # New
-joblib==1.4.2
-matplotlib==3.9.2
-numpy==2.1.3
-pandas==2.2.3
-scikit_learn==1.5.2
-streamlit==1.40.0
-plotly==5.24.1
+# joblib==1.4.2
+#matplotlib==3.9.2
+#numpy==1.24.1
+#pandas==2.2.3
+#scikit_learn==1.5.2
+# streamlit==1.40.0
+# plotly==5.24.1
 
